gap issue solved thank god

--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -39,10 +39,10 @@ body {
 /* Create a container for the main content */
 .container {
   display: inline grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 60% 40%;
   min-width: 100%;
-  padding: 20px;
-  max-height: 1000px;
+  height: 100vh;
+  /* max-height: 1000px; */
 }
 /* used grid as a way for the user to be able to look at the video while being able to acces the timestamp at the same time.  */
 
@@ -50,27 +50,17 @@ body {
 header {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: var(--main-text-color);
-  padding: 10px 0;
+  margin-left: 10px;
   width: 100%;
-  font-size: 50px;
+  font-size: 70px;
 }
 
 /* Navigation styling */
 
-nav ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-}
-
-ul li {
-  margin-right: 20px;
-}
-
-nav a {
+/* nav a {
   text-decoration: none;
   color: var(--text-color);
-}
+} */
 
 /* Media player styling */
 .media-player {
@@ -124,16 +114,65 @@ nav a {
 .additional-info {
   display: flex;
   padding: 10px;
-  max-height: 500px;
+  max-height: 95vh;
   flex-direction: column;
   align-items: flex-start;
   overflow: scroll;
+  overflow-x: hidden;
+  background-image: url("https://cdn.pixabay.com/photo/2014/04/16/17/08/bulletin-board-325721_1280.jpg");
+}
+/*I tried to somewhat match height of video when the window is maximised, but to also to fill up the page and create visual interest
+ but it doesnt work when the window is resized, will need to look into this if i have the time. 
+ Hid horizontal scrollbar as it is unneeded given the container display is flexbox. */
+
+.material-list {
+  margin-left: 20px;
+  margin-bottom: 30px;
+  padding: 3% 22% 10% 5%;
+  background-color: rgb(223, 30, 210);
+  box-shadow: 10px 10px;
+}
+/* my attempt at trying to recreate a stickynote */
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+li {
+  margin-left: 20px;
 }
 
 .timestamps {
-  display: inline-grid;
-  grid-template-columns: auto auto;
+  background-color: antiquewhite;
+  border: 10px solid antiquewhite;
 }
+
+.timestamps > h2 {
+  padding: 10px;
+}
+
+.thumbnail-and-btn {
+  display: inline-grid;
+  grid-template-columns: 40% 60%;
+}
+
+.thumbnail-and-btn > button {
+  max-height: 500px;
+  max-width: 700px;
+  column-gap: 1rem;
+  border: 5px solid #003d3a;
+  margin-bottom: 10px;
+}
+
+.thumbnail-and-btn > h3 {
+  align-self: center;
+  margin-left: 15px;
+  border-left: solid;
+}
+/* implemented grid to allow for the text to be right next to the thumbnail 
+timestamp align-self referenced from this tutorial: https://www.youtube.com/watch?v=W-JPTJtGmU8*/
+
+/* tutorial for scrollbar:https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
 
 /* Footer styling */
 footer {
@@ -142,4 +181,5 @@ footer {
   text-align: center;
   padding: 10px 0;
   width: 100%;
+  height: fit-content;
 }
